[package]
name = "tg_banana_bot"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
colog = "1.3.0"
cookie = "0.18.1"
clap = { version = "4.4.12", features = ["derive"] }
futures = "0.3.30"
log = "0.4.22"
percent-encoding = "2.3.1"
rand = "0.8.5"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
rsa = "0.9.6"
serde =  { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_urlencoded = "0.7.1"
sha2 = { version = "0.10.8", features = ["std"] }
tokio = { version = "1.38.1", features = ["full"] }
tokio-cron-scheduler = "0.10.2"
urlencoding = "2.1.3"
num_cpus = "1.16.0"
core_affinity = "0.8.1"
