[package]
name = "joker_cli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
colog = "1.3.0"
cookie = "0.18.1"
clap = { version = "4.4.12", features = ["derive"] }
log = "0.4.22"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = { version = "0.10.8", features = ["std"] }
tokio = { version = "1.38.1", features = ["full"] }
num_cpus = "1.16.0"
core_affinity = "0.8.1"
